--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <h4>Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar</h4>
         <nav id="nav">
             <ul>
-                <a href="index.html"><li><h3>Home</h3></li></a>
-                <a href=""><li><h3>Notícias</h3></li></a>
-                <a href=""><li><h3>Curiosidades</h3></li></a>
-                <a href=""><li><h3>Fale conosco</h3></li></a>
+                <a href="#conteudo"><li><h3>Home</h3></li></a>
+                <a href="#noticias"><li><h3>Notícias</h3></li></a>
+                <a href="#curiosidades"><li><h3>Curiosidades</h3></li></a>
+                <a href="#rodade"><li><h3>Fale conosco</h3></li></a>
             </ul>
         </nav>
     </header>
@@ -28,7 +28,7 @@
                 Provavelmente você sabe que o sistema operacional Android, mantido pelo Google é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.
             </h4>
         </section>
-        <section class="historia">
+        <section class="historia" id="noticias">
             <h3>A primeira versão</h3>
             <h4>
                 A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado Dan Morrill. Ele conta que abriu o Inkscape (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.
@@ -55,7 +55,7 @@
             </h4>
             <iframe src="https://www.youtube.com/embed/l2UDgpLz20M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </section>
-        <section class="extra">
+        <section class="extra" id="curiosidades">
             <div>
                 <h3>Quer aprender mais?</h3>
             </div>
