--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="#conteudo"><li><h3>Home</h3></li></a>
                 <a href="#noticias"><li><h3>Notícias</h3></li></a>
                 <a href="#curiosidades"><li><h3>Curiosidades</h3></li></a>
-                <a href="#rodade"><li><h3>Fale conosco</h3></li></a>
+                <a href="#rodape"><li><h3>Fale conosco</h3></li></a>
             </ul>
         </nav>
     </header>
