--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <footer id="rodape">
         <h6>
             <p>
-                Fontes, imagens, vídeo e textos fornecidos por Gustavo Guanabara a fim de fazer o site para o CursoemVideo.
+                Fontes, imagens, vídeo e textos fornecidos por Gustavo Guanabara e sua equipe a fim de fazer o site para o CursoemVideo.
             </p>
             <p>
                 Desafio proposto por <a href="https://github.com/gustavoguanabara"> Gustavo Guanabara</a> e concluído por <a href="https://github.com/Enne-Amore">Enne Jim Pessoa</a>.
