--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 Fontes, imagens, vídeo e textos fornecidos por Gustavo Guanabara e sua equipe a fim de fazer o site para o CursoemVideo.
             </p>
             <p>
-                Desafio proposto por <a href="https://github.com/gustavoguanabara"> Gustavo Guanabara</a> e concluído por <a href="https://github.com/Enne-Amore">Enne Jim Pessoa</a>.
+                Desafio proposto por <a href="https://github.com/gustavoguanabara" target="_blank" rel="external"> Gustavo Guanabara</a> e concluído por <a href="https://github.com/Enne-Amore" target="_blank" rel="external">Enne Jim Pessoa</a>.
             </p>
         </h6>
     </footer>
