--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <header id="cabecalho">
-        <h1>Curiosidades de Tecnologia</h1>
-        <h4>Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar</h4>
+        <h1>História do Bugdroid</h1>
+        <h4>O surgimento do mascote da marca Android sendo contado aqui</h4>
         <nav id="nav">
             <ul>
                 <a href="#conteudo"><li><h3>História</h3></li></a>
@@ -22,7 +22,7 @@
     </header>
     <main id="conteudo">
         <section class="historia">
-            <h2>História do Mascote do Android</h2>
+            <h2>Surgimento do Mascote do Android</h2>
             <h4>
                 Provavelmente você sabe que o sistema operacional <strong>Android</strong>, mantido pelo <strong>Google</strong> é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.
             </h4>
@@ -46,7 +46,7 @@
             <h4>
                 A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <strong>Bugdroid</strong>, o novo mascote do Android.
             </h4>
-            <img class="imagem" src="imagens/bugdroid.png" alt="bugdroid: o mascote android e uma pessoa lado a lado">
+            <img class="imagem android" src="imagens/bugdroid.png" alt="bugdroid: o mascote android e uma pessoa lado a lado">
             <h4>
                 A principal inspiração para os traços do novo <strong>Bugdroid</strong> veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do <strong>Google</strong> e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.
             </h4>
