tamanho das letras

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Android</title>
-    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="shortcut icon" href="src/imagens/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="src/css/responsive.css">
 </head>
 <body>
     <header id="cabecalho">
         <h1>História do Bugdroid</h1>
-        <h4>O surgimento do mascote da marca Android sendo contado aqui</h4>
+        <p>O surgimento do mascote da marca Android sendo contado aqui</p>
         <nav id="nav">
             <ul>
                 <a href="#conteudo"><li><h3>História</h3></li></a>
@@ -23,33 +23,35 @@
     <main id="conteudo">
         <section class="historia">
             <h2>Surgimento do Mascote do Android</h2>
-            <h4>
+            <p>
                 Provavelmente você sabe que o sistema operacional <strong>Android</strong>, mantido pelo <strong>Google</strong> é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.
-            </h4>
+            </p>
             <h3>A primeira versão</h3>
-            <h4>
+            <p>
                 A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" rel="external" target="_blank">Dan Morrill</a>. Ele conta que abriu o <a href="https://inkscape.org" rel="external" target="_blank">Inkscape (software livre para vetorização de imagens)</a> e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.
-            </h4>
+            </p>
             <picture class="imagem">
-                <source media="(max-width: 750px)" srcset="imagens/dan-droids-pq.png" type="image/png">
-                <img src="imagens/dan-droids.png" alt="As primeiras versões de mascote android: 4 robôs, cada um com uma cor diferente que é verde, amarela, azul e vermelha, respectivamente">
+                <source media="(max-width: 750px)" srcset="src/imagens/dan-droids-pq.png" type="image/png">
+                <img src="src/imagens/dan-droids.png" alt="As primeiras versões de mascote android: 4 robôs, cada um com uma cor diferente que é verde, amarela, azul e vermelha, respectivamente">
             </picture>
-            <h4>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os <strong>Dandroids</strong>.</h4>
+            <p>
+                Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os <strong>Dandroids.</strong>
+            </p>
             <h3>Surge um novo mascote</h3>
-            <h4>
+            <p>
                 A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://www.irinablok.com/android" rel="external" target="_blank">Irina Blok</a>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.
-            </h4>
+            </p>
             <picture class="imagem">
-                <source media="(max-width: 750px)" srcset="imagens/irina-blok-pq.jpg" type="image/png">
-                <img src="imagens/irina-blok.jpg" alt="Rosto de Irina Blok">
+                <source media="(max-width: 750px)" srcset="src/imagens/irina-blok-pq.jpg" type="image/png">
+                <img src="src/imagens/irina-blok.jpg" alt="Rosto de Irina Blok">
             </picture>
-            <h4>
+            <p>
                 A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <strong>Bugdroid</strong>, o novo mascote do Android.
-            </h4>
-            <img class="imagem android" src="imagens/bugdroid.png" alt="bugdroid: o mascote android e uma pessoa lado a lado">
-            <h4>
+            </p>
+            <img class="imagem android" src="src/imagens/bugdroid.png" alt="bugdroid: o mascote android e uma pessoa lado a lado">
+            <p>
                 A principal inspiração para os traços do novo <strong>Bugdroid</strong> veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do <strong>Google</strong> e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.
-            </h4>
+            </p>
             <div class="video">
                 <iframe src="https://www.youtube.com/embed/l2UDgpLz20M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
@@ -59,52 +61,74 @@
                 <h3>Quer aprender mais?</h3>
             </div>
             <article>
-                <h4>
+                <p>
                     Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0.
-                </h4>
-                <h5 class="lista">
-                    <ul>
-                        <li>1.5 - <abbr title="Bolo de copo">Cupcake</abbr></li>
-                        <li>1.6 - <abbr title="Rosquinha">Donut</abbr></li>
-                        <li>3.0 - <abbr title="Bomba">Eclair</abbr></li>
-                        <li>2.2 - <abbr title="Iorgute congelado">Froyo</abbr></li>
-                        <li>2.3 - <abbr title="Biscoito de gengibre">Gingerbread</abbr></li>
-                        <li>3.0 - <abbr title="Favo de mel">Honeycomb</abbr></li>
-                        <li>4.0 - <abbr title="Sanduíche de sorvete">Ice Cream Sandwich</abbr></li>
-                    </ul>
-                    <ul>
-                        <li>4.1 - <abbr title="Jujuba">Jelly Bean</abbr></li>
-                        <li>4.4 - <abbr title="Kikkat">KitKat</abbr></li>
-                        <li>5.0 - <abbr title="Pirulito">Lolipop</abbr></li>
-                        <li>6.0 - <abbr title="Marshmallow">Marshmallow</abbr></li>
-                        <li>7.0 - <abbr title="Torrone">Nougat</abbr></li>
-                        <li>8.0 - <abbr title="Oreo">Oreo</abbr></li>
-                        <li>9.0 - <abbr title="Torta">Pie</abbr></li>
-                    </ul>
-                </h5>
-                <h4>
+                </p>
+                <ul class="lista">
+                    <li>
+                        1.5 - <abbr title="Bolo de copo">Cupcake</abbr>
+                    </li>
+                    <li>
+                        1.6 - <abbr title="Rosquinha">Donut</abbr>
+                    </li>
+                    <li>
+                        3.0 - <abbr title="Bomba">Eclair</abbr>
+                    </li>
+                    <li>
+                        2.2 - <abbr title="Iorgute congelado">Froyo</abbr>
+                    </li>
+                    <li>
+                        2.3 - <abbr title="Biscoito de gengibre">Gingerbread</abbr>
+                    </li>
+                    <li>
+                        3.0 - <abbr title="Favo de mel">Honeycomb</abbr>
+                    </li>
+                    <li>
+                        4.0 - <abbr title="Sanduíche de sorvete">Ice Cream Sandwich</abbr>
+                    </li>
+                    <li>
+                        4.1 - <abbr title="Jujuba">Jelly Bean</abbr>
+                    </li>
+                    <li>
+                        4.4 - <abbr title="Kikkat">KitKat</abbr>
+                    </li>
+                    <li>
+                        5.0 - <abbr title="Pirulito">Lolipop</abbr>
+                    </li>
+                    <li>
+                        6.0 - <abbr title="Marshmallow">Marshmallow</abbr>
+                    </li>
+                    <li>
+                        7.0 - <abbr title="Torrone">Nougat</abbr>
+                    </li>
+                    <li>
+                        8.0 - <abbr title="Oreo">Oreo</abbr>
+                    </li>
+                    <li>
+                        9.0 - <abbr title="Torta">Pie</abbr>
+                    </li>
+                </ul>
+                <p>
                     Infelizmente, o <strong>Android Q</strong> não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.
-                </h4>
-                <h4>
+                </p>
+                <p>
                     Acesse aqui o site <a href="https://www.android.com/intl/en_uk/history/" rel="external" target="_blank">Android History</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.
-                </h4>
+                </p>
             </article>
         </aside>
         <section class="historia">
-            <h4>
+            <p>
                 Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema <strong>Android</strong> e seu simpático mascote.
-            </h4>
+            </p>
         </section>
     </main>
     <footer id="rodape">
-        <h6>
-            <p>
-                Fontes, imagens, vídeo e textos fornecidos por Gustavo Guanabara e sua equipe a fim de fazer o site para o <a href="https://www.youtube.com/@CursoemVideo" rel="external" target="_blank">CursoemVideo</a>.
-            </p>
-            <p>
-                Desafio proposto por <a href="https://github.com/gustavoguanabara" target="_blank" rel="external"> Gustavo Guanabara</a> e concluído por <a href="https://github.com/Enne-Amore" target="_blank" rel="external">Enne Jim Pessoa</a>.
-            </p>
-        </h6>
+        <p>
+            Fontes, imagens, vídeo e textos fornecidos por Gustavo Guanabara e sua equipe a fim de fazer o site para o <a href="https://www.youtube.com/@CursoemVideo" rel="external" target="_blank">CursoemVideo</a>.
+        </p>
+        <p>
+            Desafio proposto por <a href="https://github.com/gustavoguanabara" target="_blank" rel="external"> Gustavo Guanabara</a> e concluído por <a href="https://github.com/Enne-Amore" target="_blank" rel="external">Enne Jim Pessoa</a>.
+        </p>
     </footer>
 </body>
 </html>
