--- a/index.html
+++ b/index.html
@@ -7,128 +7,190 @@
     <link rel="shortcut icon" href="src/imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/responsive.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <script src="src/js/topo.js" defer></script>
 </head>
 <body>
+
     <header id="cabecalho">
+
         <h1>História do Bugdroid</h1>
+
         <p>O surgimento do mascote da marca Android sendo contado aqui</p>
+
         <nav id="nav">
             <ul>
-                <a href="#conteudo"><li><h3>História</h3></li></a>
-                <a href="#curiosidades"><li><h3>Curiosidades</h3></li></a>
-                <a href="#rodape"><li><h3>Créditos</h3></li></a>
+
+                <a href="#conteudo" aria-label="História do Bugdroid">História</a>
+
+                <a href="#curiosidades" aria-label="Curiosidades da história do Android">Curiosidades</a>
+
+                <a href="#rodape" aria-label="Créditos de desenvolvedore da página">Créditos</a>
+
             </ul>
         </nav>
+
     </header>
+
     <main id="conteudo">
+
         <section class="historia">
+
             <h2>Surgimento do Mascote do Android</h2>
+
             <p>
-                Provavelmente você sabe que o sistema operacional <strong>Android</strong>, mantido pelo <strong>Google</strong> é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.
+                Provavelmente você sabe que o sistema operacional <strong lang="en-us">Android</strong>, mantido pelo <strong lang="en-us">Google</strong> é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.
             </p>
+
             <h3>A primeira versão</h3>
+
             <p>
-                A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" rel="external" target="_blank">Dan Morrill</a>. Ele conta que abriu o <a href="https://inkscape.org" rel="external" target="_blank">Inkscape (software livre para vetorização de imagens)</a> e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.
+                A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" aria-label="Site sobre Dan Morrill e seus antigos mascostes do Android" rel="external" target="_blank">Dan Morrill</a>. Ele conta que abriu o <a href="https://inkscape.org" aria-label="Site de criar desenhos vetoriais" rel="external" target="_blank">Inkscape (software livre para vetorização de imagens)</a> e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.
             </p>
+
             <picture class="imagem">
                 <source media="(max-width: 750px)" srcset="src/imagens/dan-droids-pq.png" type="image/png">
                 <img src="src/imagens/dan-droids.png" alt="As primeiras versões de mascote android: 4 robôs, cada um com uma cor diferente que é verde, amarela, azul e vermelha, respectivamente">
             </picture>
+
             <p>
-                Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os <strong>Dandroids.</strong>
+                Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os <strong lang="en-us">Dandroids.</strong>
             </p>
+
             <h3>Surge um novo mascote</h3>
+
             <p>
-                A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://www.irinablok.com/android" rel="external" target="_blank">Irina Blok</a>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.
+                A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://www.irinablok.com/android" aria-label="Site da Irina Blok e sua criação do Bugdroid" rel="external" target="_blank">Irina Blok</a>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.
             </p>
+
             <picture class="imagem">
                 <source media="(max-width: 750px)" srcset="src/imagens/irina-blok-pq.jpg" type="image/png">
                 <img src="src/imagens/irina-blok.jpg" alt="Rosto de Irina Blok">
             </picture>
+
             <p>
-                A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <strong>Bugdroid</strong>, o novo mascote do Android.
+                A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <strong lang="en-us">Bugdroid</strong>, o novo mascote do Android.
             </p>
+
             <img class="imagem android" src="src/imagens/bugdroid.png" alt="bugdroid: o mascote android e uma pessoa lado a lado">
+
             <p>
-                A principal inspiração para os traços do novo <strong>Bugdroid</strong> veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do <strong>Google</strong> e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.
+                A principal inspiração para os traços do novo <strong lang="en-us">Bugdroid</strong> veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do <strong lang="en-us">Google</strong> e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.
             </p>
+
             <div class="video">
                 <iframe src="https://www.youtube.com/embed/l2UDgpLz20M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
+
         </section>
+
         <aside class="extra" id="curiosidades">
+
             <div>
                 <h3>Quer aprender mais?</h3>
             </div>
+
             <article>
+
                 <p>
                     Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0.
                 </p>
+
                 <ul class="lista">
+
                     <li>
-                        1.5 - <abbr title="Bolo de copo">Cupcake</abbr>
+                        1.5 - <abbr title="Bolo de copo" aria-label="Bolo de copo">Cupcake</abbr>
                     </li>
+
                     <li>
-                        1.6 - <abbr title="Rosquinha">Donut</abbr>
+                        1.6 - <abbr title="Rosquinha" aria-label="Rosquinha">Donut</abbr>
                     </li>
+
                     <li>
-                        3.0 - <abbr title="Bomba">Eclair</abbr>
+                        3.0 - <abbr title="Bomba" aria-label="Bomba">Eclair</abbr>
                     </li>
+
                     <li>
-                        2.2 - <abbr title="Iorgute congelado">Froyo</abbr>
+                        2.2 - <abbr title="Iorgute congelado" aria-label="Iorgute congelado">Froyo</abbr>
                     </li>
+
                     <li>
-                        2.3 - <abbr title="Biscoito de gengibre">Gingerbread</abbr>
+                        2.3 - <abbr title="Biscoito de gengibre" aria-label="Biscoito de gengibre">Gingerbread</abbr>
                     </li>
+
                     <li>
-                        3.0 - <abbr title="Favo de mel">Honeycomb</abbr>
+                        3.0 - <abbr title="Favo de mel" aria-label="Favo de mel">Honeycomb</abbr>
                     </li>
+
                     <li>
-                        4.0 - <abbr title="Sanduíche de sorvete">Ice Cream Sandwich</abbr>
+                        4.0 - <abbr title="Sanduíche de sorvete" aria-label="Sanduíche de sorvete">Ice Cream Sandwich</abbr>
                     </li>
+
                     <li>
-                        4.1 - <abbr title="Jujuba">Jelly Bean</abbr>
+                        4.1 - <abbr title="Jujuba" aria-label="Jujuba">Jelly Bean</abbr>
                     </li>
+
                     <li>
-                        4.4 - <abbr title="Kikkat">KitKat</abbr>
+                        4.4 - <abbr title="Kit-kat" aria-label="Kit-Kat">KitKat</abbr>
                     </li>
+
                     <li>
-                        5.0 - <abbr title="Pirulito">Lolipop</abbr>
+                        5.0 - <abbr title="Pirulito" aria-label="Pirulito">Lolipop</abbr>
                     </li>
+
                     <li>
-                        6.0 - <abbr title="Marshmallow">Marshmallow</abbr>
+                        6.0 - <abbr title="Marshmallow" aria-label="Marshmallow">Marshmallow</abbr>
                     </li>
+
                     <li>
-                        7.0 - <abbr title="Torrone">Nougat</abbr>
+                        7.0 - <abbr title="Torrone" aria-label="Torrone">Nougat</abbr>
                     </li>
+
                     <li>
-                        8.0 - <abbr title="Oreo">Oreo</abbr>
+                        8.0 - <abbr title="Oreo" aria-label="Oreo">Oreo</abbr>
                     </li>
+
                     <li>
-                        9.0 - <abbr title="Torta">Pie</abbr>
+                        9.0 - <abbr title="Torta" aria-label="Torta">Pie</abbr>
                     </li>
+
                 </ul>
+
                 <p>
                     Infelizmente, o <strong>Android Q</strong> não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.
                 </p>
+
                 <p>
-                    Acesse aqui o site <a href="https://www.android.com/intl/en_uk/history/" rel="external" target="_blank">Android History</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.
+                    Acesse aqui o site <a href="https://www.android.com/intl/en_uk/history/" aria-label="Site contando a história do Android" rel="external" target="_blank" lang="en-us">Android History</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.
                 </p>
+
             </article>
+
         </aside>
+
         <section class="historia">
             <p>
-                Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema <strong>Android</strong> e seu simpático mascote.
+                Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema <strong lang="en-us">Android</strong> e seu simpático mascote.
             </p>
         </section>
+
     </main>
+
     <footer id="rodape">
+
+        <span class="material-symbols-outlined sr-only" id="topo" aria-hidden="true">
+            keyboard_double_arrow_up
+        </span>
+
         <p>
-            Fontes, imagens, vídeo e textos fornecidos por Gustavo Guanabara e sua equipe a fim de fazer o site para o <a href="https://www.youtube.com/@CursoemVideo" rel="external" target="_blank">CursoemVideo</a>.
+            Fontes, imagens, vídeo e textos fornecidos por Gustavo Guanabara e sua equipe a fim de fazer o site para o <a href="https://www.youtube.com/@CursoemVideo" aria-label="Canal do Curso em Vídeo do Gustavo Guanabara" rel="external" target="_blank">Curso em Video.</a>
         </p>
+
         <p>
-            Desafio proposto por <a href="https://github.com/gustavoguanabara" target="_blank" rel="external"> Gustavo Guanabara</a> e concluído por <a href="https://github.com/Enne-Amore" target="_blank" rel="external">Enne Jim Pessoa</a>.
+            Desafio proposto por <a href="https://github.com/gustavoguanabara" aria-label="Conta do professor Guanabara do GitHub" target="_blank" rel="external"> Gustavo Guanabara</a> e concluído por <a href="https://github.com/Enne-Amore" aria-label="Minha conta do GitHub" target="_blank" rel="external">Enne Jim Pessoa.</a>
         </p>
+
     </footer>
+
 </body>
 </html>
