--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h2>Surgimento do Mascote do Android</h2>
 
             <p>
-                Provavelmente você sabe que o sistema operacional <strong lang="en-us">Android</strong>, mantido pelo <strong lang="en-us">Google</strong> é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.
+                Provavelmente você sabe que o sistema operacional <strong lang="en-us">Android,</strong> mantido pelo <strong lang="en-us">Google</strong> é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.
             </p>
 
             <h3>A primeira versão</h3>
@@ -69,7 +69,7 @@
             </picture>
 
             <p>
-                A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <strong lang="en-us">Bugdroid</strong>, o novo mascote do Android.
+                A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <strong lang="en-us">Bugdroid,</strong> o novo mascote do Android.
             </p>
 
             <img class="imagem android" src="src/imagens/bugdroid.png" alt="bugdroid: o mascote android e uma pessoa lado a lado">
