--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
     <footer id="rodape">
 
-        <span class="material-symbols-outlined sr-only" id="topo" aria-hidden="true" tabindex="0">
+        <span class="material-symbols-outlined sr-only" id="topo" aria-hidden="true" aria-label="Volte ao topo da página clicando aqui" tabindex="0">
             keyboard_double_arrow_up
         </span>
 
