--- a/index.html
+++ b/index.html
@@ -5,37 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Android</title>
     <link rel="shortcut icon" href="src/imagens/favicon.ico" type="image/x-icon">
+    <!-- CSS -->
+    <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/responsive.css">
+    <!-- Fontes -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <!-- JavaScript -->
     <script src="src/js/topo.js" defer></script>
 </head>
 <body>
-
     <header id="cabecalho">
-
         <h1>História do Bugdroid</h1>
 
         <p>O surgimento do mascote da marca Android sendo contado aqui</p>
 
         <nav id="nav">
             <ul>
+                <a href="#conteudo" aria-label="História do Bugdroid">
+                    História
+                </a>
 
-                <a href="#conteudo" aria-label="História do Bugdroid">História</a>
+                <a href="#curiosidades" aria-label="Curiosidades da história do Android">
+                    Curiosidades
+                </a>
 
-                <a href="#curiosidades" aria-label="Curiosidades da história do Android">Curiosidades</a>
-
-                <a href="#rodape" aria-label="Créditos de desenvolvedore da página">Créditos</a>
-
+                <a href="#rodape" aria-label="Créditos de desenvolvedore da página">
+                    Créditos
+                </a>
             </ul>
         </nav>
 
     </header>
 
     <main id="conteudo">
-
         <section class="historia">
-
             <h2>Surgimento do Mascote do Android</h2>
 
             <p>
@@ -65,6 +69,7 @@
 
             <picture class="imagem">
                 <source media="(max-width: 750px)" srcset="src/imagens/irina-blok-pq.jpg" type="image/png">
+                
                 <img src="src/imagens/irina-blok.jpg" alt="Rosto de Irina Blok">
             </picture>
 
@@ -81,23 +86,19 @@
             <div class="video">
                 <iframe src="https://www.youtube.com/embed/l2UDgpLz20M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
-
         </section>
 
         <aside class="extra" id="curiosidades">
-
             <div>
                 <h3>Quer aprender mais?</h3>
             </div>
 
             <article>
-
                 <p>
                     Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0.
                 </p>
 
                 <ul class="lista">
-
                     <li>
                         1.5 - <abbr title="Bolo de copo" aria-label="Bolo de copo">Cupcake</abbr>
                     </li>
@@ -163,9 +164,7 @@
                 <p>
                     Acesse aqui o site <a href="https://www.android.com/intl/en_uk/history/" aria-label="Site contando a história do Android" rel="external" target="_blank" lang="en-us">Android History</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.
                 </p>
-
             </article>
-
         </aside>
 
         <section class="historia">
@@ -173,11 +172,9 @@
                 Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema <strong lang="en-us">Android</strong> e seu simpático mascote.
             </p>
         </section>
-
     </main>
 
     <footer id="rodape">
-
         <span class="material-symbols-outlined sr-only" id="topo" aria-hidden="true" aria-label="Volte ao topo da página clicando aqui" tabindex="0">
             keyboard_double_arrow_up
         </span>
@@ -189,8 +186,6 @@
         <p>
             Desafio proposto por <a href="https://github.com/gustavoguanabara" aria-label="Conta do professor Guanabara do GitHub" target="_blank" rel="external"> Gustavo Guanabara</a> e concluído por <a href="https://github.com/Enne-Amore" aria-label="Minha conta do GitHub" target="_blank" rel="external">Enne Jim Pessoa.</a>
         </p>
-
     </footer>
-
 </body>
 </html>
