--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
             </p>
 
             <picture class="imagem">
-                <source media="(max-width: 750px)" srcset="src/imagens/dan-droids-pq.png" type="image/png">
+                <source media="(max-width: 750px) and (orientation: portrait)" srcset="src/imagens/dan-droids-pq.png" type="image/png">
+
                 <img src="src/imagens/dan-droids.png" alt="As primeiras versões de mascote android: 4 robôs, cada um com uma cor diferente que é verde, amarela, azul e vermelha, respectivamente">
             </picture>
 
@@ -68,7 +69,7 @@
             </p>
 
             <picture class="imagem">
-                <source media="(max-width: 750px)" srcset="src/imagens/irina-blok-pq.jpg" type="image/png">
+                <source media="(max-width: 750px) and (orientation: portrait)" srcset="src/imagens/irina-blok-pq.jpg" type="image/png">
                 
                 <img src="src/imagens/irina-blok.jpg" alt="Rosto de Irina Blok">
             </picture>
